--- a/core/res/res/values/du_config.xml
+++ b/core/res/res/values/du_config.xml
@@ -102,4 +102,9 @@
          error cause as Regular deactivation(36). -->
     <bool name="config_radio_reset_on_regular_deactivation">true</bool>
 
+    <!-- Hardware button brightness -->
+    <integer name="config_buttonBrightnessSettingDefault">255</integer>
+    <integer name="config_keyboardBrightnessSettingDefault">0</integer>
+    <bool name="config_deviceHasVariableButtonBrightness">false</bool>
+
 </resources>
