--- a/core/res/res/values/du_symbols.xml
+++ b/core/res/res/values/du_symbols.xml
@@ -109,4 +109,9 @@
   <java-symbol type="integer" name="config_offsetCenterX" />
   <java-symbol type="integer" name="config_offsetCenterY" />
 
+  <!-- Hardware button brightness -->
+  <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
+  <java-symbol type="integer" name="config_keyboardBrightnessSettingDefault" />
+  <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
+
 </resources>
